differentiator and other updates

--- a/app/casestudy/mom.html
+++ b/app/casestudy/mom.html
@@ -77,8 +77,8 @@ gtag('config', 'UA-159861942-1');
                             <!-- <h2 class="portfolio-section__text-content-title portfolio-section__text-content-title--afiaanyi">
                                 afiaanyi
                             </h2> -->
-                            <div class="header__case--logo" style="margin: 0 auto;">
-                                <a href="#" target="_blank">
+                            <div class="header__case--logo mom" style="margin: 0 auto;">
+                                <a href="https://www.mantleofmordecai.org/" target="_blank">
                                     <img src="../assets/images/momlogo.png" alt="">
                                 </a>
                             </div>
@@ -91,7 +91,7 @@ gtag('config', 'UA-159861942-1');
                                         
                                        
                                     </ul>
-                                    <a style="color: #871E62;" href="#" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover">
+                                    <a style="color: #871E62;" target="_blank" href="https://www.mantleofmordecai.org/" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover">
                                         Go to Website
                                     </a>
                                 </div>
@@ -547,7 +547,7 @@ gtag('config', 'UA-159861942-1');
                         </div>
 
                         <p class="client__text" style="padding-bottom: 0px;">
-                            After considering the needs of the MoMfoundation, we decided to build a website that could tell a gripping story of the foundation's outreach programs. The site was interactive, user-friendly, and fluid. We developed a custom content 
+                            After considering the needs of the MoM Foundation, we decided to build a website that could tell a gripping story of the foundation's outreach programs. The site was interactive, user-friendly, and fluid. We developed a custom content 
                             management system that suits the activities the foundation would perform on their website.   
                         </p>
 
