--- a/app/casestudy/nerfund.html
+++ b/app/casestudy/nerfund.html
@@ -78,7 +78,7 @@ gtag('config', 'UA-159861942-1');
                                 afiaanyi
                             </h2> -->
                             <div class="header__case--logo">
-                                <a href="#" target="_blank">
+                                <a href="https://www.ner-fund.com.ng/NERFUND" target="_blank">
                                     <img src="../assets/images/nerfundlogo.png" alt="">
                                 </a>
                             </div>
@@ -90,7 +90,7 @@ gtag('config', 'UA-159861942-1');
                                         <li>Creatives</li>
                                        
                                     </ul>
-                                    <a style="color: #2B8309;" href="#" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover">
+                                    <a style="color: #2B8309;" target="_blank" href="https://www.ner-fund.com.ng/NERFUND" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover">
                                         Go to Website
                                     </a>
                                 </div>
