--- a/app/casestudy/petrolauto.html
+++ b/app/casestudy/petrolauto.html
@@ -77,8 +77,8 @@ gtag('config', 'UA-159861942-1');
                             <!-- <h2 class="portfolio-section__text-content-title portfolio-section__text-content-title--afiaanyi">
                                 afiaanyi
                             </h2> -->
-                            <div class="header__case--logo" style="padding-left: 40px;">
-                                <a href="#" target="_blank">
+                            <div class="header__case--logo petrol">
+                                <a href="https://petrolauto.com" target="_blank">
                                     <img src="../assets/images/petrollogo.png" alt="">
                                 </a>
                             </div>
@@ -90,7 +90,7 @@ gtag('config', 'UA-159861942-1');
                                         <li>CMS Portal</li>
                                        
                                     </ul>
-                                    <a style="color: #E83124;" href="#" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover">
+                                    <a style="color: #E83124;" href="https://petrolauto.com" target="_blank" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover">
                                         Go to Website
                                     </a>
                                 </div>
