--- a/app/casestudy/tru-data.html
+++ b/app/casestudy/tru-data.html
@@ -77,7 +77,7 @@ gtag('config', 'UA-159861942-1');
                             <!-- <h2 class="portfolio-section__text-content-title portfolio-section__text-content-title--afiaanyi">
                                 afiaanyi
                             </h2> -->
-                            <div class="header__case--logo afiaanyi">
+                            <div class="header__case--logo afiaanyi xpad">
                                 <a href="https://www.tru-data.com" target="_blank">
                                     <img src="../assets/images/tdlogo.png" alt="">
                                 </a>
