--- a/app/team.html
+++ b/app/team.html
@@ -595,8 +595,8 @@
                                     </div>
                                     <h3 class="team__hero">Onyeka Akumah's Profile</h3>
                                         <div class="team__links">
-                                            <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                            <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            <a href="https://www.linkedin.com/in/onyekaakumah" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                            <a href="https://mobile.twitter.com/onyekaakumah" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                         </div>
                                     </div>
                                     <p>
@@ -636,8 +636,8 @@
                                     </div>
                                     <h3 class="team__hero">Charles Ojei Profile</h3>
                                         <div class="team__links">
-                                            <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                            <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                            <a href="https://www.linkedin.com/in/charles-o-143159" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                            <a href="https://mobile.twitter.com/OjeiCharles" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                         </div>
                                 </div>
                                 <p>
@@ -673,8 +673,8 @@
                                         </div>
                                     <h3 class="team__hero">Adebola Kupoluyi's Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <a href="https://www.linkedin.com/in/adebolakupoluyi" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <!-- <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a> -->
                                             </div>
                                     </div>
                                     <p>
@@ -714,8 +714,8 @@
                                         </div>
                                     <h3 class="team__hero">Olayemi Keri Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <a href="https://www.linkedin.com/in/yemikeri" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="https://twitter.com/YemiKeri" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                             </div>
                                     </div>
                                     <p>
@@ -755,8 +755,8 @@
                                         </div>
                                     <h3 class="team__hero">Onayinka Olusegun Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <a href="https://www.linkedin.com/in/onayinka-olusegun-15083820" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="https://twitter.com/onayinka_segun" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                             </div>
                                     </div>
                                     <p>
@@ -779,8 +779,8 @@
                                         </div>
                                     <h3 class="team__hero">Ismail Damcida Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <!-- <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a> -->
+                                                <!-- <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a> -->
                                             </div>
                                     </div>
                                     <p>
@@ -988,8 +988,8 @@
                                         </div>
                                         <h3 class="team__hero">Olajumoke Oduwole's Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <a href="https://www.linkedin.com/in/olajumokeoduwole" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="https://mobile.twitter.com/JumokeOduwole" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                             </div>
                                     </div>
                                     <p>
@@ -1020,8 +1020,8 @@
                                         </div>
                                     <h3 class="team__hero">Olalekan Oladele's Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <!-- <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a> -->
+                                                <!-- <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a> -->
                                             </div>
                                     </div>
                                     <p>
@@ -1044,8 +1044,8 @@
                                         </div>
                                         <h3 class="team__hero">Dipo Olojede's Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <a href="https://www.linkedin.com/in/dipo-gbadebo-olojede-59468286" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <!-- <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a> -->
                                             </div>
                                     </div>
                                     <p>
@@ -1070,8 +1070,8 @@
                                         </div>
                                         <h3 class="team__hero">George Edowande's Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <a href="https://www.linkedin.com/in/ikponmwosa-george-edomwande-452233a9" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="https://twitter.com/George_slimz" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                             </div>
                                     </div>
                                     <p>
@@ -1093,7 +1093,7 @@
                                         </div>
                                         <h3 class="team__hero">Abiola Akinwoleola's Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="https://www.linkedin.com/in/abiola-akinwoleola-916b84145" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
                                                 <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                             </div>
                                     </div>
@@ -1115,7 +1115,7 @@
                                         </div>
                                         <h3 class="team__hero">Kazeem Adebola's Profile</h3>
                                             <div class="team__links">
-                                                <a href="" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
+                                                <a href="https://www.linkedin.com/in/adebola-idris-kazeem" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
                                                 <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                             </div>
                                     </div>
