latest updates and correction

--- a/app/casestudy/petrolauto.html
+++ b/app/casestudy/petrolauto.html
@@ -90,7 +90,7 @@ gtag('config', 'UA-159861942-1');
                                         <li>CMS Portal</li>
                                        
                                     </ul>
-                                    <a style="color: #E83124;" href="https://petrolauto.com" target="_blank" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover">
+                                    <a style="color: #E83124;" href="https://petrolauto.com" target="_blank" class="btn btn--primary portfolio-section__content-btn header__case--btn btn--hover btn--petrol">
                                         Go to Website
                                     </a>
                                 </div>
