--- a/app/differentiator.html
+++ b/app/differentiator.html
@@ -814,8 +814,11 @@
             delay: 200
         };
 
-        ScrollReveal({ reset: false }).reveal(".work__content", slideInTop);
-        ScrollReveal({ reset: false }).reveal(".work__title", slideInLeft);
+        ScrollReveal({ reset: false }).reveal(".diff__desc h3", slideInTop);
+        ScrollReveal({ reset: false }).reveal(".work__img--cont img", slideInTop);
+        ScrollReveal({ reset: false }).reveal(".work__visual img.work__im", slideInTop);
+        ScrollReveal({ reset: false }).reveal(".diff__desc h2", slideInLeft);
+        ScrollReveal({ reset: false }).reveal(".diff__desc p span", slideInDown);
         ScrollReveal({ reset: false }).reveal(".footer__title", slideInDown);
 
 
