--- a/app/team.html
+++ b/app/team.html
@@ -1094,7 +1094,7 @@
                                         <h3 class="team__hero">Abiola Akinwoleola's Profile</h3>
                                             <div class="team__links">
                                                 <a href="https://www.linkedin.com/in/abiola-akinwoleola-916b84145" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <a href="https://twitter.com/Mythirandir" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                             </div>
                                     </div>
                                     <p>
@@ -1116,7 +1116,7 @@
                                         <h3 class="team__hero">Kazeem Adebola's Profile</h3>
                                             <div class="team__links">
                                                 <a href="https://www.linkedin.com/in/adebola-idris-kazeem" target="_blank"><img src="assets/images/linkedin-gradient.png" alt=""></a>
-                                                <a href="" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
+                                                <a href="https://twitter.com/pkaidris" target="_blank"><img class="twitter" src="assets/images/twitter-gradient.png" alt=""></a>
                                             </div>
                                     </div>
                                     <p>
