--- a/app/geek-capital.html
+++ b/app/geek-capital.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        Geek Capital - KJK
+        Geek Capital - KJK Africa
     </title>
     <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
