--- a/app/services.html
+++ b/app/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        Our Services @KJK
+        Our Services - KJK Africa
     </title>
     <!-- build:css assets/styles/styles.css -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
