--- a/app/services.html
+++ b/app/services.html
@@ -612,10 +612,16 @@ gtag('config', 'UA-159861942-1');
             </div>
             <div class="services__container__img">
                 <div class="services__img">
+                    <img src="assets/images/notebook.jpg" alt="" class="services__img__inner-one services__img__inner-one--floated">
+                    <img src="assets/images/sano-br.png" alt="" class="services__img__inner-two services__img__inner-two--left">
+                </div>
+            </div>
+            <!-- <div class="services__container__img">
+                <div class="services__img">
                     <img src="assets/images/corporatebg.png" alt="" class="services__img__inner-one services__img__inner-one--floated">
                     <img src="assets/images/corporateimg.png" alt="" class="services__img__inner-two services__img__inner-two--left">
                 </div>
-            </div>
+            </div> -->
             
             
         </div>
